<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.LoginFragment"
        android:background="@color/fondo">

    <TextView
            android:text="@string/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitulo"
            android:textSize="38sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.07999998"
            android:textColor="@color/verde"
            android:shadowColor="@color/rosa"
            android:shadowRadius="1"
            android:shadowDy="7"
            android:shadowDx="7"/>

    <ImageView
            android:src="@drawable/videogame_asset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivIcono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
            app:layout_constraintVertical_bias="0.04000002"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            app:layout_constraintTop_toBottomOf="@id/ivIcono"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.037"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textColorHint="@color/verde"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/rosa"
            android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/accionadores"
                android:id="@+id/etUsuario"
                android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            app:layout_constraintTop_toBottomOf="@id/tfUsuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.06999999"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textColorHint="@color/verde"
            app:boxBackgroundMode="outline"
            app:hintTextColor="@color/rosa"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/rosa">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@color/accionadores"
                android:id="@+id/etContraseña"
                android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/loguear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoguear"
            app:layout_constraintTop_toBottomOf="@id/tfContraseña"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnContraseña"
            app:layout_constraintVertical_bias="0.089999974"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/accionadores"
            style="@style/TextoSombra"
            android:textSize="16sp"
            android:layout_marginStart="16dp"/>

    <Button
            android:text="@string/botonOlvidoContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnContraseña"
            app:layout_constraintTop_toBottomOf="@+id/tfContraseña"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnLoguear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:backgroundTint="@color/accionadores"
            style="@style/TextoSombra"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.089999974"
            android:layout_marginEnd="16dp"/>

    <Button
            android:text="@string/botonRegistrar"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrar"
            app:layout_constraintTop_toBottomOf="@+id/btnLoguear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/accionadores"
            style="@style/TextoSombra"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.089999974"/>

    <Button
            android:text="@string/logFaceboock"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnFacebook"
            app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.089999974"
            android:backgroundTint="#03A9F4"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:icon="@drawable/facebook_asset"
            app:iconGravity="start"
            app:iconTint="@null"
            app:iconSize="28dp"
            android:textAlignment="viewStart"/>

    <Button
            android:text="@string/logGoogle"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoogle"
            app:layout_constraintTop_toBottomOf="@+id/btnFacebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.089999974"
            android:backgroundTint="#E91E63"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            app:icon="@drawable/google_asset"
            app:iconSize="22dp"
            app:iconGravity="start"
            app:iconTint="@null"
            android:textAlignment="viewStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>