<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ContactoFragment"
        android:background="@color/fondo">

            <TextView
                    android:text="@string/registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvRegistro"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="52dp"
                    app:layout_constraintHorizontal_bias="0.034"
                    android:textAppearance="@style/TextoSombra"
                    android:textSize="24sp"/>
            <TextView
                    android:text="@string/cambiarFoto"
                    android:layout_width="113dp"
                    android:layout_height="21dp"
                    android:id="@+id/tvCambiarFoto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="124dp"
                    app:layout_constraintHorizontal_bias="0.708"
                    android:textSize="16sp" android:textAppearance="@style/TextoSombra"/>
            <ImageView
                    android:layout_width="171dp"
                    android:layout_height="173dp"
                    android:id="@+id/ivFoto"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toBottomOf="@+id/tvRegistro"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp" app:layout_constraintHorizontal_bias="0.041"/>
            <ImageButton
                    android:src="@drawable/baseline_add_a_photo_24"
                    android:layout_width="56dp"
                    android:layout_height="54dp"
                    android:id="@+id/btnCamara"
                    app:layout_constraintStart_toEndOf="@+id/ivFoto"
                    app:layout_constraintEnd_toStartOf="@+id/btnGaleria"
                    app:layout_constraintTop_toBottomOf="@+id/tvCambiarFoto"
                    android:layout_marginTop="24dp"
                    android:background="#00FFFFFF"
                    android:layout_marginEnd="-30dp"
                    android:contentDescription="@string/cambiarFoto"/>
            <ImageButton
                    android:src="@drawable/baseline_add_photo_alternate_24"
                    android:layout_width="52dp"
                    android:layout_height="53dp"
                    android:id="@+id/btnGaleria"
                    app:layout_constraintStart_toEndOf="@+id/btnCamara"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCambiarFoto"
                    android:layout_marginTop="24dp"
                    android:background="#00FFFFFF"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/cambiarFoto"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfUsuarioRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:textStyle="bold"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/rosa"
                    app:layout_constraintTop_toBottomOf="@+id/ivFoto"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@color/accionadores"
                        android:id="@+id/etUsuarioRegistro"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfContraseñaRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    app:layout_constraintTop_toBottomOf="@id/tfUsuarioRegistro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.06999999"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/rosa"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/rosa" android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@color/accionadores"
                        android:id="@+id/etContraseñaRegistro"
                        android:textSize="16sp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfNacimientoRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fechaNac"
                    app:layout_constraintTop_toBottomOf="@id/tfContraseñaRegistro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintVertical_bias="0.06999999"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="outline"
                    app:hintTextColor="@color/rosa"
                    android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/accionadores"
                        android:id="@+id/etNacimientoRegistro"
                        android:textSize="16sp"
                        android:focusable="false"
                        android:clickable="true"/>
            </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/botonRegistrar"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistrar"
            app:layout_constraintTop_toBottomOf="@id/tfNacimientoRegistro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/accionadores"
            style="@style/TextoSombra"
            android:textSize="16sp"
            app:layout_constraintVertical_bias="0.089999974"/>

</androidx.constraintlayout.widget.ConstraintLayout>