<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ContactoFragment"
        android:background="@color/fondo">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView
                    android:text="@string/nintendo"
                    android:layout_width="166dp"
                    android:layout_height="52dp"
                    android:id="@+id/txContacto"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.01999998"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:textColor="@color/verde"
                    android:shadowColor="@color/rosa"
                    android:shadowRadius="1"
                    android:shadowDy="7"
                    android:shadowDx="7"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfTelf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/txContacto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.04000002"
                    app:startIconDrawable="@drawable/baseline_call_24"
                    app:startIconCheckable="true"
                    app:startIconScaleType="fitStart"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="filled"
                    app:hintTextColor="@color/rosa"
                    app:startIconTint="@color/verde">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@color/accionadores"
                        android:text="@string/numtelefono"
                        style="@style/TextoSombra"
                        android:editable="false"
                        android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tfTelf"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.04000002"
                    app:startIconDrawable="@drawable/baseline_email_24"
                    app:startIconCheckable="true"
                    app:startIconScaleType="fitStart"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="filled"
                    app:hintTextColor="@color/rosa"
                    app:startIconTint="@color/verde">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@color/accionadores"
                        android:text="@string/email"
                        style="@style/TextoSombra"
                        android:editable="false"
                        android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfLocal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tfEmail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.04000002"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:startIconDrawable="@drawable/baseline_location_on_24"
                    app:startIconCheckable="true"
                    app:startIconScaleType="fitStart"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="filled"
                    app:hintTextColor="@color/rosa"
                    app:startIconTint="@color/verde">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@color/accionadores"
                        android:text="@string/location"
                        style="@style/TextoSombra"
                        android:editable="false"
                        android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tfWhatsApp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tfLocal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_bias="0.04000002"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:startIconDrawable="@drawable/whatsapp"
                    app:startIconCheckable="true"
                    app:startIconScaleType="fitStart"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/verde"
                    app:boxBackgroundMode="filled"
                    app:hintTextColor="@color/rosa"
                    app:startIconTint="@color/verde">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:background="@color/accionadores"
                        android:text="@string/whatsapp"
                        style="@style/TextoSombra"
                        android:editable="false"
                        android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:layout_width="382dp"
                    android:layout_height="377dp"
                    android:id="@+id/ivMapa"
                    app:layout_constraintTop_toBottomOf="@+id/tfWhatsApp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    android:scaleType="fitXY"
                    app:layout_constraintHorizontal_bias="0.486"
                    android:layout_marginTop="25dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>